tests/snapshots/examples_fixtures/effects__failing__01_missing_effect_in_helper.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/effects/failing/01_missing_effect_in_helper.flx
== compile ==
failed (compile)
== diagnostics ==
error[E400]: Missing Ambient Effect

Call to `println` requires effect `Console` in this function signature.

  examples/effects/failing/01_missing_effect_in_helper.flx:28:5
   |
28 |     println("missing Console")
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     -------------------------- effectful call occurs here

Hint:
  Add `with Console` to the enclosing function.
== stdout ==
<not executed>
